[gd_scene load_steps=7 format=3 uid="uid://cl4amue2vk25l"]

[ext_resource type="Script" path="res://Tapestry/tapestry.gd" id="1_4wrbg"]
[ext_resource type="Resource" uid="uid://dfutoygrnyl1p" path="res://Tapestry/Places/Olympia/Olympia.tres" id="2_2uno6"]
[ext_resource type="Texture2D" uid="uid://hlgn3elstgdn" path="res://Tapestry/TapestryPanelWool.png" id="2_ai642"]
[ext_resource type="Script" path="res://Tapestry/tapestry_item.gd" id="2_rk1cc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2xhmg"]
texture = ExtResource("2_ai642")
texture_margin_left = 100.0
texture_margin_top = 100.0
texture_margin_right = 100.0
texture_margin_bottom = 100.0

[sub_resource type="Theme" id="Theme_k6yxr"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_2xhmg")

[node name="Tapestry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wrbg")
starting_items = Array[ExtResource("2_rk1cc")]([ExtResource("2_2uno6")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -100.0
offset_right = 118.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_k6yxr")

[node name="Place" type="TextureRect" parent="VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "X"

[node name="PlaceButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CharButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Submit" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Submit"

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/PlaceButton" to="." method="_on_place_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/SettingButton" to="." method="_on_setting_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/CharButton" to="." method="_on_char_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Submit" to="." method="_on_submit_pressed"]
